Combined both Matcher and regex order/requests in .txt, other code improvements

--- a/notebooks/overview.ipynb
+++ b/notebooks/overview.ipynb
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -248,6 +248,7 @@
       "UNIQUE AUTHORS: 2106\n",
       "UNIQUE ENTRIES: 5446\n",
       "AVG WORD COUNT: 351.9120455380095\n",
+      "TOTAL WORD COUNT: 1916513\n",
       "GAMES FEATURED: Morrowind, Oblivion, Skyrim, TES: Online, Daggerfall, Arena\n"
      ]
     }
@@ -258,6 +259,7 @@
     "print(\"UNIQUE AUTHORS:\", len(es_df['author'].unique()))\n",
     "print(\"UNIQUE ENTRIES:\", len(es_df['title'].unique()))\n",
     "print(\"AVG WORD COUNT:\", es_df['word_count'].mean())\n",
+    "print(\"TOTAL WORD COUNT:\", es_df['word_count'].sum())\n",
     "\n",
     "master_list = list()\n",
     "for glist in es_df.loc[:, 'game']:\n",
@@ -419,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +433,9 @@
       "NUMBER OF UNIQUE SPEAKERS: 84\n",
       "NUMBER OF IN-FILE QUESTS: 131\n",
       "NUMBER OF IN-GAME QUESTS: 90\n",
-      "DIALOGUE TYPES:  9\n"
+      "DIALOGUE TYPES:  9\n",
+      "AVG WORD COUNT: 33.9156746031746\n",
+      "TOTAL WORD COUNT: 34187\n"
      ]
     }
    ],
@@ -441,7 +445,9 @@
     "print(\"NUMBER OF UNIQUE SPEAKERS:\", len(tl_df['speaker'].unique()))\n",
     "print(\"NUMBER OF IN-FILE QUESTS:\", len(tl_df['quest_name'].unique()))\n",
     "print(\"NUMBER OF IN-GAME QUESTS:\", len(tl_df['quest_displayname'].unique()))\n",
-    "print(\"DIALOGUE TYPES: \", len(tl_df['dialogtype'].unique()))"
+    "print(\"DIALOGUE TYPES: \", len(tl_df['dialogtype'].unique()))\n",
+    "print(\"AVG WORD COUNT:\", tl_df['word_count'].mean())\n",
+    "print(\"TOTAL WORD COUNT:\", tl_df['word_count'].sum())"
    ]
   },
   {
@@ -750,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -761,7 +767,9 @@
       "NUMBER OF UNIQUE SPEAKERS: 538\n",
       "NUMBER OF UNIQUE LISTENERS: 152\n",
       "NUMBER OF TIMES PLAYER IS INTENDED LISTENER: 1331\n",
-      "LIST OF ANIMATIONS: Dead, Taunt, Greeting, Listen, Worship, Salute, Bow, Talk_Normal, Talk_Pleading, Talk_Forceful, Talk_Laughing, Talk_Sad, Victory, Scratch_Head, Drunk, Inject, Flirt, Use_Computer_LP, Horror, Use_Computer, Persuade, Activate, Sleep, Prone, Ready, Pause, Choked, Talk_Injured, Listen_Injured, Kneel_Talk_Angry, Kneel_Talk_Sad\n"
+      "LIST OF ANIMATIONS: Dead, Taunt, Greeting, Listen, Worship, Salute, Bow, Talk_Normal, Talk_Pleading, Talk_Forceful, Talk_Laughing, Talk_Sad, Victory, Scratch_Head, Drunk, Inject, Flirt, Use_Computer_LP, Horror, Use_Computer, Persuade, Activate, Sleep, Prone, Ready, Pause, Choked, Talk_Injured, Listen_Injured, Kneel_Talk_Angry, Kneel_Talk_Sad\n",
+      "AVG WORD COUNT: 19.075788176496765\n",
+      "TOTAL WORD COUNT: 557261\n"
      ]
     }
    ],
@@ -770,7 +778,9 @@
     "print(\"NUMBER OF UNIQUE SPEAKERS:\", len(kotor_df['speaker'].unique()))\n",
     "print(\"NUMBER OF UNIQUE LISTENERS:\", len(kotor_df['listener'].unique()))\n",
     "print(\"NUMBER OF TIMES PLAYER IS INTENDED LISTENER:\", len(kotor_df[kotor_df['listener'] == 'PLAYER']))\n",
-    "print(\"LIST OF ANIMATIONS:\", ', '.join(list(meta_df['name'])))"
+    "print(\"LIST OF ANIMATIONS:\", ', '.join(list(meta_df['name'])))\n",
+    "print(\"AVG WORD COUNT:\", kotor_df['word_count'].mean())\n",
+    "print(\"TOTAL WORD COUNT:\", kotor_df['word_count'].sum())"
    ]
   },
   {
@@ -902,6 +912,27 @@
     "hollow_df = pd.read_pickle(FILEPATH + 'hollow_knight.pkl')\n",
     "display(hollow_df.head())\n",
     "print(hollow_df.info())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===================== OTHER STATS =====================\n",
+      "AVG WORD COUNT: 756.2545454545455\n",
+      "TOTAL WORD COUNT: 41594\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"===================== OTHER STATS =====================\")\n",
+    "print(\"AVG WORD COUNT:\", hollow_df['word_count'].mean())\n",
+    "print(\"TOTAL WORD COUNT:\", hollow_df['word_count'].sum())"
    ]
   },
   {
