Organized my notebook subdir and gave each section their own notebook

--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -29,7 +29,6 @@
    "outputs": [],
    "source": [
     "# Necessary imports\n",
-    "import nltk\n",
     "import spacy\n",
     "from spacy.matcher import Matcher\n",
     "\n",
@@ -121,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### spaCy Set-Up"
+    "### Document Set-Up"
    ]
   },
   {
@@ -1319,6 +1318,13 @@
    "source": [
     "for text in nf.concordances(es_df, phrase=r'Cyrodiilic', col='text', context_cols=['author', 'title'], sides=40):\n",
     "    print(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you can see, _toponynms_ are an issue."
    ]
   },
   {
