--- a/notebooks/speech_acts.ipynb
+++ b/notebooks/speech_acts.ipynb
@@ -17,6 +17,13 @@
     "5. What are the most common form(s) orders and requests can take?\n",
     "\n",
     "All of this is on a _\"gotten-data-level\"_, while I suspect many things found here may apply to video games as a whole, broad assumptions relating to this topic requires more data.\n",
+    "\n",
+    "### Contents\n",
+    "1. [Introduction](#how-are-ordersrequests-realized-in-video-game-dialogue)\n",
+    "2. [Matcher Expressions](#matcher-expressions)\n",
+    "3. [Regular Expressions](#regular-expressions)\n",
+    "4. [In-Use Samples](#orders--requests-in-use)\n",
+    "5. [Graphs & Numbers](#orders--request-numbers)\n",
     "***\n",
     "## Python Imports"
    ]
@@ -291,6 +298,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Orders & Requests In-Use\n",
     "Now let's use these to examine some orders and requests. Let's start by looking at the orders and requests using the simple `re` regex, since a lot of context can still be observed by observing the rest of the Dataframe. I'll tackle this in a few stages, first I'll compile a list of orders and requests and observe what we see. Then, I'll try to graph the numbers of order and request types found per video game. Although, again, the regular expressions might produce false negatives and positives, so these numbers will be slightly off. I might try to formalize the precision and recall rates later, but probably not."
    ]
   },
@@ -412,6 +420,13 @@
     "    print('\\t' + regex)\n",
     "    for text in nf.concordances(es_df, ord_req[regex], context_cols=['author', 'title'], num=1, highlight=False):\n",
     "        print(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Orders & Request Numbers"
    ]
   },
   {
