--- a/notebooks/overview.ipynb
+++ b/notebooks/overview.ipynb
@@ -20,11 +20,18 @@
     "***\n",
     "## Research Questions\n",
     "After looking more deeply at the data, I have now formed more well-rounded and established questions that I want to try to answer. Some questions pertain to a specific dataset while others will be (hopefully) answered using some combination of some or all the datasets. They are as follows:\n",
-    "1. How do video game pragmatics and discourse differ from their real life counterparts? Does the player being the central figure drastically affect how they are realized?\n",
-    "2. What (if any) techniques do video game writers employ which are different from other forms of writing?\n",
-    "3. Do writers of fantasy video games take into consideration sociolinguistic elements such as dialect, culture, identity, region, etc. when writing their characters? If so, how?\n",
-    "4. Expanding upon question 3, are those considerations \"realistic\"; in other words, do writers commit pseudo-linguistics when trying to write for fantasy cultures? (e.g. \"This fantasy culture talks like this because they cannot understand the first person\" or something).\n",
-    "5. Are there differences between professional video game writers, and \"indie\" (low-budget, small studio) video game writers?\n",
+    "1. How are orders/requests realized in video game dialogues? Are there more direct or indirect orders?\n",
+    "2. What is the frequency of the 2nd person pronoun, _you_? \n",
+    "    * Extending that, what are the frequencies of other pronouns?\n",
+    "3. What are some common named entities in video games?\n",
+    "    * Extending this, what are some hapaxes related to named entities?\n",
+    "***\n",
+    "## Contents\n",
+    "1. [The Elder Scrolls Overview](#elder-scrolls-series-overview)\n",
+    "2. [Torchlight II Overview](#torchlight-ii-overview)\n",
+    "3. [Star Wars: Knights of the Old Republic Overview](#star-wars-knight-of-the-old-republic-overview)\n",
+    "4. [Hollow Knight Overview](#hollow-knight-overview)\n",
+    "5. [Additional Notes](#additional-notes)\n",
     "***\n",
     "## Python Imports\n",
     "Below are the necessary imports to show the established `.pkl` files. All `.pkl` files are the full datasets located in a `.gitignore` private subdirectory."
