--- a/notebooks/pronoun_freqs.ipynb
+++ b/notebooks/pronoun_freqs.ipynb
@@ -15,6 +15,10 @@
     "3. The frequencies of other pronouns used in similar cases.\n",
     "\n",
     "All of this is on a _\"gotten-data-level\"_, while I suspect many things found here may apply to video games as a whole, broad assumptions relating to this topic requires more data.\n",
+    "\n",
+    "### Contents\n",
+    "1. [Second Person Pronoun](#exploring-usage-of-the-2nd-person-pronoun)\n",
+    "2. [Other Pronouns](#other-pronouns)\n",
     "***\n",
     "## Python Imports"
    ]
