Removed some comments

--- a/notebooks/initial_base_data_exploration.ipynb
+++ b/notebooks/initial_base_data_exploration.ipynb
@@ -530,7 +530,6 @@
     "elder_scrolls_df = pd.read_json(filepath + \"/The Elder Scrolls/data/imperial_library_20200626.json\")\n",
     "display(elder_scrolls_df.head())\n",
     "\n",
-    "# To quote Ross Geller: \"PIVOT, PIVOT, PIVOT\"\n",
     "elder_scrolls_df = elder_scrolls_df.transpose()\n",
     "display(elder_scrolls_df.head())"
    ]
@@ -874,7 +873,7 @@
     "# Now let's get the names into their own column\n",
     "elder_scrolls_df['title'] = [re.sub(r'https://www.imperial-library.info/content/', '', title) for title in elder_scrolls_df.index]\n",
     "\n",
-    "# Create a new DataFrame to get rid of the weirdness\n",
+    "# Create a new DataFrame\n",
     "elder_scrolls_df = elder_scrolls_df[['title', 'author', 'description', 'game', 'text', 'url']]\n",
     "elder_scrolls_df = elder_scrolls_df.reset_index(drop=True)\n",
     "display(elder_scrolls_df.head(20))"
