Updated links for nbviewer

--- a/notebooks/initial_base_data_exploration.ipynb
+++ b/notebooks/initial_base_data_exploration.ipynb
@@ -12,10 +12,10 @@
     "Here is my initial poke of the data from the [video-game-text-corpora](https://github.com/hmi-utwente/video-game-text-corpora).\n",
     "\n",
     "### Contents\n",
-    "1. [The Elder Scrolls](#the-elder-scrolls-data)\n",
-    "2. [Torchlight II](#torchlight-data)\n",
-    "3. [Star Wars: Knights of the Old Republic](#star-wars-knights-of-the-old-republic)\n",
-    "4. [Hollow Knight](#hollow-knight)\n",
+    "1. [The Elder Scrolls](#The-Elder-Scrolls-Data:)\n",
+    "2. [Torchlight II](#Torchlight-Data:)\n",
+    "3. [Star Wars: Knights of the Old Republic](#Star-Wars:-Knights-of-the-Old-Republic:)\n",
+    "4. [Hollow Knight](#Hollow-Knight:)\n",
     "***"
    ]
   },
