--- a/notebooks/named_entities.ipynb
+++ b/notebooks/named_entities.ipynb
@@ -18,8 +18,8 @@
     "All of this is on a _\"gotten-data-level\"_, while I suspect many things found here may apply to video games as a whole, broad assumptions relating to this topic requires more data.\n",
     "\n",
     "### Content\n",
-    "1. [Named Entities](#named-entities)\n",
-    "2. [Named-Entity Hapaxes](#hapaxes)\n",
+    "1. [Named Entities](#Named-Entities)\n",
+    "2. [Named-Entity Hapaxes](#Hapaxes)\n",
     "***\n",
     "## Python Imports"
    ]
