--- a/notebooks/overview.ipynb
+++ b/notebooks/overview.ipynb
@@ -27,11 +27,11 @@
     "    * Extending this, what are some hapaxes related to named entities?\n",
     "***\n",
     "## Contents\n",
-    "1. [The Elder Scrolls Overview](#elder-scrolls-series-overview)\n",
-    "2. [Torchlight II Overview](#torchlight-ii-overview)\n",
-    "3. [Star Wars: Knights of the Old Republic Overview](#star-wars-knight-of-the-old-republic-overview)\n",
-    "4. [Hollow Knight Overview](#hollow-knight-overview)\n",
-    "5. [Additional Notes](#additional-notes)\n",
+    "1. [The Elder Scrolls Overview](#Elder-Scrolls-Series-Overview)\n",
+    "2. [Torchlight II Overview](#Torchlight-II-Overview)\n",
+    "3. [Star Wars: Knights of the Old Republic Overview](#Star-Wars:-Knights-of-the-Old-Republic-Overview)\n",
+    "4. [Hollow Knight Overview](#Hollow-Knight-Overview)\n",
+    "5. [Additional Notes](#Additional-Notes)\n",
     "***\n",
     "## Python Imports\n",
     "Below are the necessary imports to show the established `.pkl` files. All `.pkl` files are the full datasets located in a `.gitignore` private subdirectory."
