--- a/notebooks/research.ipynb
+++ b/notebooks/research.ipynb
@@ -12,12 +12,12 @@
     "This is a continuation from the previous Jupyter Notebook (`overview.ipynb`) where I begin to analyze the data in-accordance to my proposed research questions. I might change or modify the research questions here. As such, I update both this and the main `README.md` file (not in `project_plan.md`, to retain the initial ideas for this research).\n",
     "***\n",
     "## Table of Contents\n",
-    "1. [Python Set-Up](#python-set-up)\n",
-    "2. [Orders & Requests](#how-are-ordersrequests-realized-in-video-game-dialogue)\n",
-    "3. [2nd Person Singular](#exploring-usage-of-the-2nd-person-pronoun)\n",
-    "4. [Other Pronouns](#other-pronouns)\n",
-    "5. [Entities](#named-entities)\n",
-    "6. [Hapaxes](#hapaxes)\n",
+    "1. [Python Set-Up](#Python-Set-Up)\n",
+    "2. [Orders & Requests](#How-Are-Orders/Requests-Realized-in-Video-Game-Dialogue?)\n",
+    "3. [2nd Person Singular](#Exploring-Usage-of-the-2nd-Person-Pronoun)\n",
+    "4. [Other Pronouns](#Other-Pronouns)\n",
+    "5. [Entities](#Named-Entities)\n",
+    "6. [Hapaxes](#Hapaxes)\n",
     "***\n",
     "## Python Set-Up"
    ]
