--- a/notebooks/speech_acts.ipynb
+++ b/notebooks/speech_acts.ipynb
@@ -19,11 +19,11 @@
     "All of this is on a _\"gotten-data-level\"_, while I suspect many things found here may apply to video games as a whole, broad assumptions relating to this topic requires more data.\n",
     "\n",
     "### Contents\n",
-    "1. [Introduction](#how-are-ordersrequests-realized-in-video-game-dialogue)\n",
-    "2. [Matcher Expressions](#matcher-expressions)\n",
-    "3. [Regular Expressions](#regular-expressions)\n",
-    "4. [In-Use Samples](#orders--requests-in-use)\n",
-    "5. [Graphs & Numbers](#orders--request-numbers)\n",
+    "1. [Introduction](#How-Are-Orders/Requests-Realized-in-Video-Game-Dialogue?)\n",
+    "2. [Matcher Expressions](#Matcher-Expressions)\n",
+    "3. [Regular Expressions](#Regular-Expressions)\n",
+    "4. [In-Use Samples](#Orders-&-Requests-In-Use)\n",
+    "5. [Graphs & Numbers](#Orders-&-Request-Numbers)\n",
     "***\n",
     "## Python Imports"
    ]
