--- a/notebooks/pronoun_freqs.ipynb
+++ b/notebooks/pronoun_freqs.ipynb
@@ -17,8 +17,8 @@
     "All of this is on a _\"gotten-data-level\"_, while I suspect many things found here may apply to video games as a whole, broad assumptions relating to this topic requires more data.\n",
     "\n",
     "### Contents\n",
-    "1. [Second Person Pronoun](#exploring-usage-of-the-2nd-person-pronoun)\n",
-    "2. [Other Pronouns](#other-pronouns)\n",
+    "1. [Second Person Pronoun](#Exploring-Usage-of-the-2nd-Person-Pronoun)\n",
+    "2. [Other Pronouns](#Other-Pronouns)\n",
     "***\n",
     "## Python Imports"
    ]
