Updated links in overview and init-poke to fix broken links... again...

--- a/notebooks/initial_base_data_exploration.ipynb
+++ b/notebooks/initial_base_data_exploration.ipynb
@@ -12,10 +12,10 @@
     "Here is my initial poke of the data from the [video-game-text-corpora](https://github.com/hmi-utwente/video-game-text-corpora).\n",
     "\n",
     "### Contents\n",
-    "1. [The Elder Scrolls](#The-Elder-Scrolls-Data:)\n",
-    "2. [Torchlight II](#Torchlight-Data:)\n",
-    "3. [Star Wars: Knights of the Old Republic](#Star-Wars:-Knights-of-the-Old-Republic:)\n",
-    "4. [Hollow Knight](#Hollow-Knight:)\n",
+    "1. [The Elder Scrolls](#The-Elder-Scrolls-Data)\n",
+    "2. [Torchlight II](#Torchlight-Data)\n",
+    "3. [Star Wars: Knights of the Old Republic](#Star-Wars:-Knights-of-the-Old-Republic)\n",
+    "4. [Hollow Knight](#Hollow-Knight)\n",
     "***"
    ]
   },
@@ -53,7 +53,7 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## The Elder Scrolls Data:"
+    "## The Elder Scrolls Data"
    ]
   },
   {
@@ -1732,7 +1732,7 @@
    "metadata": {},
    "source": [
     "***\n",
-    "# Torchlight Data:\n",
+    "# Torchlight Data\n",
     "\n",
     "**PLEASE NOTE** This data is stored in both a `.csv` and a `.json`. Please see [orignal documentation](https://github.com/hmi-utwente/video-game-text-corpora/tree/master/Torchlight%20II) for more information (no, the script doesn't work, I tried). I ended up using only the `.csv` because it was easier to work with and contained way more relevant information for my research."
    ]
