--- a/notebooks/overview.ipynb
+++ b/notebooks/overview.ipynb
@@ -29,7 +29,7 @@
     "## Contents\n",
     "1. [The Elder Scrolls Overview](#Elder-Scrolls-Series-Overview)\n",
     "2. [Torchlight II Overview](#Torchlight-II-Overview)\n",
-    "3. [Star Wars: Knights of the Old Republic Overview](#Star-Wars:-Knights-of-the-Old-Republic-Overview)\n",
+    "3. [Star Wars: Knights of the Old Republic Overview](#Star-Wars:-Knight-of-the-Old-Republic-Overview)\n",
     "4. [Hollow Knight Overview](#Hollow-Knight-Overview)\n",
     "5. [Additional Notes](#Additional-Notes)\n",
     "***\n",
@@ -947,7 +947,7 @@
    "metadata": {},
    "source": [
     "***\n",
-    "## Additional Notes:\n",
+    "## Additional Notes\n",
     "All datasets will be used in the answering of my research questions. However, here are some highlights regarding each question and some hypothesis/guesses with the datasets.\n",
     "1. For this question, the _Hollow Knight_, _Torchlight II_, and _Kotor_ datasets will be perfect for this (also _The Dishonored Series_ if I can get it). _The Elder Scrolls_ data contains actual books published in-game, so I don't expect to get much out of them, if anything with this question. I hypothesize that the majority of discourse in-game involved the player in some way, shape, or form. I also hypothesize that **all** dialogue is tailored to help the player or immerse the player.\n",
     "2. All datasets will be useful here. However, I suspect much dialogue writing can be thought of as a template:\n",
