Made small corrections to overview.ipynb and also added more to final report.md

--- a/notebooks/overview.ipynb
+++ b/notebooks/overview.ipynb
@@ -70,7 +70,7 @@
     "***\n",
     "## Elder Scrolls Series Overview\n",
     "### Game Summary\n",
-    "_The Elder Scrolls_ is a series of single-player role-playing game where the player takes control of the main character (usually some prophecized hero) to explore a region of the medieval-style fantasy world _Tamriel_. Created by _Bethesda Game Studios_, the game series first entry _Elder Scrolls: Arena_ was published in 1994 and the datasets most recent entry, _The Elder Scrolls: Online_, was released in 2014. Note, however, the latest entry is not single-player, but a massive multiplayer online game (MMO).\n",
+    "_The Elder Scrolls_ is a series of single-player role-playing games where the player takes control of the main character (usually some prophesied hero) to explore a region of the medieval-style fantasy world _Tamriel_. Created by _Bethesda Softworks_, the game series first entry, _Elder Scrolls: Arena_ was published in 1994 and the datasets most recent entry, _The Elder Scrolls: Online_, was released in 2014. Note, however, the latest entry is not single-player, but a m,assive multiplayer online game (MMO).\n",
     "### Data Summary\n",
     "The dataset itself contains the books which players can find scattered throughout the games' maps. The data was collected from the [Elder Scrolls Fan Wikis](https://elderscrolls.fandom.com/wiki/The_Elder_Scrolls_Wiki). Each entry contains the following information:\n",
     "* `title`: The book's title\n",
@@ -283,7 +283,7 @@
     "***\n",
     "## Torchlight II Overview\n",
     "### Game Summary\n",
-    "_Torchlight II_ is another single-player role-playing where the player completes quests while exploring randomly generated dungeons. A dungeon is a series of rooms and corridors where the player is pitted against enemies, all in the hope to find items and complete quests. The game was made by _Runic Games_ and released in 2012.\n",
+    "_Torchlight II_ is another single-player role-playing game where the player completes quests while exploring randomly generated dungeons. A dungeon is a series of rooms and corridors where the player is pitted against enemies, all in the hope to find items and complete quests. The game was made by _Runic Games_ and released in 2012.\n",
     "### Data Summary\n",
     "The dataset was originally split into both a `.csv` and `.json` file. However, I only extracted information from the `.csv` file as it contained the actually dialogue and metadata needed for my research. The `.json` file contained mostly game engine related data. Each entry contains the following information:\n",
     "* `speaker`: The person/entity giving the quest. \"NO SPEAKER\" indicates this quest is given through some narration or other format.\n",
@@ -464,7 +464,7 @@
     "***\n",
     "## Star Wars: Knight of the Old Republic Overview\n",
     "### Game Summary\n",
-    "_Star Wars: Knights of the Old Republic_ is a 2003 single-player role-playing game released by _Bioware_ and published through _LucasArts_. The player plays as Revan and traverses the _Star Wars_ univerise during the age of the Old Republic (set before the prequel trilogy). This game is commonly abbreviated as _KOTOR_/_Kotor_, and as such, further mentions of this game in this and other notebooks/markdown files will follow suit.\n",
+    "_Star Wars: Knights of the Old Republic_ is a 2003 single-player role-playing game released by _Bioware_ and published through _LucasArts_. The player plays as Revan and traverses the _Star Wars_ universe during the age of the Old Republic (set before the prequel trilogy). This game is commonly abbreviated as _KOTOR_/_Kotor_, and as such, further mentions of this game in this and other notebooks/markdown files will follow suit.\n",
     "### Data Summary\n",
     "This dataset was comprised of two `.csv` files: one containing the actual dialogue, and the other containing metadata regarding the animations which the characters did during the dialogue. For context, game developers usually employ a set amount of animations which all/most character models can do. This allows them to mass-apply certain animations throughout the game and save time and development costs. Each entry contains the following for `kotor.pkl`:\n",
     "* `speaker`: The speaker of the dialogue.\n",
@@ -797,7 +797,7 @@
     "***\n",
     "## Hollow Knight Overview\n",
     "### Game Summary\n",
-    "_Hollow Knight_ is a [Metroidvania](https://en.wikipedia.org/wiki/Metroidvania#:~:text=Metroidvania%20is%20a%20subgenre%20of,genre%20borrowing%20from%20both%20series.) styled game made by _Team Cherry_ and released early 2017. The player controls _The Knight_ as they make their way through the dark fantasy world. What's interesting about this game is that it was made by 3 people, with the writing being done by 2 of those individuals in a Google Doc. So, I believe this will be an amazing dataset to explore the differences between professional video game writing and amateur writing (although the writing is still good nonetheless).\n",
+    "_Hollow Knight_ is a [Metroidvania](https://en.wikipedia.org/wiki/Metroidvania#:~:text=Metroidvania%20is%20a%20subgenre%20of,genre%20borrowing%20from%20both%20series.)-style game made by _Team Cherry_ and released early 2017. The player controls _The Knight_ as they make their way through its dark fantasy world, the Kingdom of Hallownest. What's interesting about this game is that it was made by 3 people, with the writing being done by 2 of those individuals in a Google Doc. So, I believe this will be an amazing dataset to explore the differences between professional video game writing and amateur writing (although the writing is still good nonetheless).\n",
     "### Data Summary\n",
     "I gathered the data from a fan-made [Google Document](https://docs.google.com/document/d/1oaED7I6xL5NItD-wKyDB455f58d3weLz8OMIkRyEQlo/edit#heading=h.wgd1af4mikjx) containing every single textual item in the game. I don't know why they did that as I know they did it completely by hand. The document is over 200 pages long and extremely well-formatted. I used [`HDialogueParser.py`](https://github.com/Data-Science-for-Linguists-2022/Sociolinguistics-In-Video-Games/blob/main/scripts/HDialogueParser.py) with the following techniques:\n",
     "1. Copy the original Google Document, simplifying the non-textual and header elements. Get both an `.html` and `.txt` version.\n",
