Added a link to the pronoun frequencies notebook and continued work on the 2nd analysis question

--- a/notebooks/pronoun_freqs.ipynb
+++ b/notebooks/pronoun_freqs.ipynb
@@ -18,7 +18,8 @@
     "\n",
     "### Contents\n",
     "1. [Second Person Pronoun](#Exploring-Usage-of-the-2nd-Person-Pronoun)\n",
-    "2. [Other Pronouns](#Other-Pronouns)\n",
+    "2. [\"You\" Concordances](#\"You\"-Concordances)\n",
+    "3. [Other Pronouns](#Other-Pronouns)\n",
     "***\n",
     "## Python Imports"
    ]
@@ -192,7 +193,7 @@
    "metadata": {},
    "source": [
     "This makes sense given that the data for _Hollow Knight_, _KOTOR_, and _Torchlight_ all relate to directing the player and giving the players objectives/quests in some way, shape, or form. The dataset pertaining to _The Elder Scrolls_ however, does not. Since its dataset is that of books written to be read by the player in-game, it makes sense that there is an extremely low frequency of the 2nd person pronoun. I expect this to change with other pronouns.\n",
-    "\n",
+    "### \"You\" Concordances\n",
     "Let's take a look at some of the contexts which the second person singular takes place in."
    ]
   },
