Worked more on final analysis section and updated the named entities notebook. Also updated the notebooks README.md with more links

--- a/notebooks/named_entities.ipynb
+++ b/notebooks/named_entities.ipynb
@@ -19,7 +19,8 @@
     "\n",
     "### Content\n",
     "1. [Named Entities](#Named-Entities)\n",
-    "2. [Named-Entity Hapaxes](#Hapaxes)\n",
+    "2. [Dataframe Creation](#Dataframe-Creation)\n",
+    "3. [Named-Entity Hapaxes](#Hapaxes)\n",
     "***\n",
     "## Python Imports"
    ]
@@ -207,6 +208,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Dataframe Creation\n",
     "Let's create a dataframe which will contain the following information:\n",
     "\n",
     "| Column | Data |\n",
