Finished rerun and updated images

--- a/notebooks/pronoun_freqs.ipynb
+++ b/notebooks/pronoun_freqs.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -208,49 +208,49 @@
      "text": [
       "===================== \"You\" Concordance Samples =====================\n",
       "===================== TES Books =====================\n",
-      "Author: Anonymous | Title: silt-strider-station | Concordance:\n",
-      "\t...costs of an unsettling sea voyage when YOU can travel overland in safety and comfort...\n",
-      "Author: Anonymous | Title: whats-yours-mine-little-larceny | Concordance:\n",
-      "\t...YOU turn your back and then...\n",
-      "Author: Anonymous | Title: ruined-watchmasters-journal | Concordance:\n",
-      "\t...our oath. See it upheld. Eight protect YOU and our Pale Watch....\n",
-      "Author: Falura Uveleth | Title: journal-fallen-officer | Concordance:\n",
-      "\t...well. No one talks about torture when YOU're signing up, but it happens. Deaths come...\n",
-      "Author: M | Title: assassins-orders | Concordance:\n",
-      "\t...in Balmora. I'll have further instructions for YOU, and your first payment, as promised. This...\n",
+      "Author: Anonymous | Title: baandari-peddler-note | Concordance:\n",
+      "\t...This one assumes YOU understand now, yes?...\n",
+      "Author: Geocrates Varnus, ed. | Title: death-blow-abernanit | Concordance:\n",
+      "\t...My foe, dark lord Dagoth Thras, before YOU slay me,...\n",
+      "Author: Speaker Gilzaron | Title: fan-false-face | Concordance:\n",
+      "\t...I trust YOU with this job Rizikeh, so don't let...\n",
+      "Author: Ampyrian Brum | Title: gold-ribbon-merrit | Concordance:\n",
+      "\t...Stryngpool and laughed: \"I remember it because YOU used to run down it every time...\n",
+      "Author: Risa Uvaril | Title: risas-journal | Concordance:\n",
+      "\t...If you're reading this, may YOU fare better on the Coiled Path than...\n",
       "===================== Hollow Knight Dialogue =====================\n",
-      "Character: Distant Villagers | Concordance:\n",
-      "\t...Greetings. YOU are very tired. Sit and rest....\n",
-      "Character: Zote the Mighty | Concordance:\n",
-      "\t...Just what do you think you're doing?! YOU dare to come between me and my...\n",
-      "Character: Willoh | Concordance:\n",
-      "\t...Oh! Come in search of treats have YOU? I chanced upon a unique little fungus...\n",
-      "Character: Cloth | Concordance:\n",
-      "\t...The tiny steps of a tiny creature. YOU got the look of an adventurer, so...\n",
-      "Character: Galien | Concordance:\n",
-      "\t...place to test my strength. No doubt YOU wish to test your might as well,...\n",
+      "Character: Divine | Concordance:\n",
+      "\t...Did you call us? YOU called us, and we came. We came!...\n",
+      "Character: The Hunter | Concordance:\n",
+      "\t...Tiny squib... You approach fearless. Are YOU a hunter like me? Do you feel...\n",
+      "Character: Hornet | Concordance:\n",
+      "\t...I've seen YOU, creeping through the undergrowth, stalking me....\n",
+      "Character: Elderbug | Concordance:\n",
+      "\t...to offer welcome. Our town's fallen quiet YOU see....\n",
+      "Character: Marmu | Concordance:\n",
+      "\t...Oh, stranger... YOU're strong. Much stronger than me......\n",
       "===================== KOTOR Dialogue =====================\n",
-      "Speaker: Bounty Hunter | Listener: NO LISTENER | Concordance:\n",
-      "\t...Hey - YOU're the one who won that swoop race,...\n",
+      "Speaker: Faulty War Droid | Listener: NO LISTENER | Concordance:\n",
+      "\t...[Success] Patrol mode engaged. Once YOU end this session the droid will begin...\n",
       "Speaker: Player | Listener: NO LISTENER | Concordance:\n",
-      "\t...Haven't I told YOU guys to get lost already?...\n",
-      "Speaker: Nemo | Listener: NO LISTENER | Concordance:\n",
-      "\t...I think, perhaps, YOU place an undue importance on rank and...\n",
-      "Speaker: Jolee | Listener: NO LISTENER | Concordance:\n",
-      "\t...where was I? Oh yes, the story... YOU almost made me forget about it. Nice...\n",
-      "Speaker: Zaerdra111 | Listener: NO LISTENER | Concordance:\n",
-      "\t...the thanks of all the Hidden Beks. YOU rode like a true champion in the...\n",
+      "\t...wants us to be together, why do YOU keep resisting my undeniable charms?...\n",
+      "Speaker: Selkath Warden | Listener: NO LISTENER | Concordance:\n",
+      "\t...I will, of course, be here if YOU need something else....\n",
+      "Speaker: Player | Listener: NO LISTENER | Concordance:\n",
+      "\t...History? What are YOU talking about?...\n",
+      "Speaker: Freyyr | Listener: NO LISTENER | Concordance:\n",
+      "\t...challenge Chuundar based on tradition, I suggest YOU don't say these things to anyone....\n",
       "===================== Torchlight Quests =====================\n",
-      "Speaker: Elder Josimon | Concordance:\n",
-      "\t...Have YOU found the hostages yet?...\n",
-      "Speaker: NO SPEAKER | Concordance:\n",
-      "\t...YOU summoned Cacklespit - a witch who has...\n",
-      "Speaker: Shady Character | Concordance:\n",
-      "\t...If I have any more work for YOU, I'll be sure to let you know....\n",
       "Speaker: Vanquisher Guard | Concordance:\n",
-      "\t...Hey, if YOU're heading back to the Enclave, can you...\n",
-      "Speaker: Bounty Board | Concordance:\n",
-      "\t...The Empire thanks YOU for your valuable service, and wishes to...\n"
+      "\t...Did YOU make it up to the Enclave?...\n",
+      "Speaker: Trill-Bot 4000 | Concordance:\n",
+      "\t...YOU've heard of me of course, my talent...\n",
+      "Speaker: NO SPEAKER | Concordance:\n",
+      "\t...So, YOU're going after the Alchemist?...\n",
+      "Speaker: Vanquisher | Concordance:\n",
+      "\t...Word is that YOU met not one, but two Guardians!...\n",
+      "Speaker: Olwin | Concordance:\n",
+      "\t...YOU have lifted the curse I brought upon...\n"
      ]
     }
    ],
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -372,7 +372,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.10"
   },
   "orig_nbformat": 4
